@@ -5,32 +5,27 @@
 #endif
 
 DT_IN_FILE inline
-5
+4
 
 0 map_parent
 1              % num parents
     -1 { p0 }
 
-1 map_state_seg
-1
-% floor divide by the number of states per seg
-    -1 { floor_divide(p0, CARD_STATE / CARD_SEG) }
-
-2 map_state_segCountDown
+1 map_seg_segCountDown
 1
 % default is to always start at the maximum value
 % this is only used at the beginning of an observation track
     -1 { CARD_SEGCOUNTDOWN-1 }
 
-3 map_frameIndex_ruler
+2 map_frameIndex_ruler
 1
 % is the frameIndex divisible by RULER_SCALE
     -1 { mod(p0, RULER_SCALE) == 0 }
 
-4 map_segTransition_ruler_state_segCountDown_segCountDown
+3 map_segTransition_ruler_seg_segCountDown_segCountDown
 4
-% current state (p2) is unused for now but will be eventually once
-% heterogeneous mappings of state to initial segCountDown value are
+% current seg (p2) is unused for now but will be eventually once
+% heterogeneous mappings of seg to initial segCountDown value are
 % allowed
     0 2 0 default
       % segTransition(0) == 0:
@@ -53,31 +48,26 @@ DPMF_IN_FILE inline
 0 dpmf_always 1 1.0
 
 DETERMINISTIC_CPT_IN_FILE inline
-5
+4
 
-0 state_seg
+0 seg_segCountDown
 1
-CARD_STATE CARD_SEG
-map_state_seg
+CARD_SEG CARD_SEGCOUNTDOWN
+map_seg_segCountDown
 
-1 state_segCountDown
-1
-CARD_STATE CARD_SEGCOUNTDOWN
-map_state_segCountDown
-
-2 frameIndex_ruler
+1 frameIndex_ruler
 1
 CARD_FRAMEINDEX CARD_RULER
 map_frameIndex_ruler
 
-3 segTransition_ruler_state_segCountDown_segCountDown
+2 segTransition_ruler_seg_segCountDown_segCountDown
 4
-CARD_RULER CARD_SEGTRANSITION CARD_STATE CARD_SEGCOUNTDOWN CARD_SEGCOUNTDOWN
-map_segTransition_ruler_state_segCountDown_segCountDown
+CARD_RULER CARD_SEGTRANSITION CARD_SEG CARD_SEGCOUNTDOWN CARD_SEGCOUNTDOWN
+map_segTransition_ruler_seg_segCountDown_segCountDown
 
-4 state_state_copy
+3 seg_seg_copy
 1
-CARD_STATE CARD_STATE
+CARD_SEG CARD_SEG
 map_parent
 
 #ifndef INPUT_PARAMS_FILENAME
