@@ -1,6 +1,11 @@
 0.1.11:
 
 * switch from old DRMAA module to new drmaa module
+* BIC is now defined as -(2/n) ln L + k ln N where n is num of bases
+  and N is num of sequences
+* new segway-layer program changes the format of segway.bed.gz to
+  something that is more intuitive for large numbers of labels, using
+  thick/thin lines
 
 0.1.10:
 
